# gitlab-cli

./: .travis.yml  Cargo.toml  README.md
src/: clone.rs  completion.rs  configure.rs  gitlab_config.rs  main.rs  publish.rs  status.rs
src/login/: mod.rs  saml.rs
